Added loading circle to chat order page

--- a/Orderly.Client/Pages/Chats/Order.razor
+++ b/Orderly.Client/Pages/Chats/Order.razor
@@ -16,10 +16,20 @@
 
 @if (CurrentUser is null || CurrentOrder is null || CurrentChat is null)
 {
-    <div class="text-muted">Loading...</div>
+    @*
+        Loading Circle
+    *@
+
+    <div class="flex items-center justify-center h-[calc(100svh-4rem)]">
+        <div class="w-12 h-12 border-4 border-gray-300 rounded-full animate-spin border-t-[var(--fg)]"></div>
+    </div>
 }
 else
 {
+    @*
+        Chat Window
+    *@
+
     <ChatApp CanSendMessages="true"
                 CurrentUser="@CurrentUser"
                 CurrentChat="@CurrentChat"
