Updated spacing for dashboard pages

--- a/Orderly.Client/Pages/Dashboard/Chats.razor
+++ b/Orderly.Client/Pages/Dashboard/Chats.razor
@@ -14,11 +14,17 @@
 
 <PageTitle>Chats - Orderly</PageTitle>
 
-<div class="flex justify-center px-4 py-6 min-h-[calc(100svh-4rem)]">
+<div class="flex justify-center mt-16 px-4 sm:px-6 lg:px-8 min-h-[calc(100svh-4rem)]">
     <div class="w-full max-w-3xl flex flex-col">
         @*
             Header
         *@
+
+        <!-- Title -->
+
+        <h1 class="text-3xl font-bold text-lightfg dark:text-darkfg">Chats</h1>
+
+        <!-- Search Fields -->
 
         <div class="flex flex-col sm:flex-row sm:items-center gap-2 px-0 sm:px-2 py-2">
             <!-- Search Input -->
