--- a/Orderly.Client/Pages/Dashboard/Orders/Received.razor
+++ b/Orderly.Client/Pages/Dashboard/Orders/Received.razor
@@ -15,13 +15,13 @@
 
 <PageTitle>Received Orders - Orderly</PageTitle>
 
-<div class="flex flex-col w-full max-w-screen-xl mx-auto p-4 sm:p-6 lg:p-8 space-y-6">
+<div class="flex flex-col w-full max-w-screen-xl mx-auto px-4 sm:px-6 lg:px-8 space-y-6 mt-16">
     @*
         Title
     *@
 
     <div class="flex flex-col sm:flex-row">
-        <h1 class="text-3xl font-bold mb-6 text-lightfg dark:text-darkfg">Manage Products</h1>
+        <h1 class="text-3xl font-bold mb-6 text-lightfg dark:text-darkfg">Manage Received Orders</h1>
     </div>
 
     @*
