--- a/Orderly.Client/Pages/Dashboard/Products.razor
+++ b/Orderly.Client/Pages/Dashboard/Products.razor
@@ -15,7 +15,7 @@
 
 <PageTitle>Products - Orderly</PageTitle>
 
-<div class="flex flex-col w-full max-w-screen-xl mx-auto p-4 sm:p-6 lg:p-8 space-y-6">
+<div class="flex flex-col w-full max-w-screen-xl mx-auto px-4 sm:px-6 lg:px-8 mt-16 space-y-6">
     @*
         Title
     *@
